--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   bloc: ^8.1.4
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
