--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   equatable: ^2.0.5
   bloc: ^8.1.4
   percent_indicator: ^4.2.3
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
